--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             margin: 0;
         }
         #map { 
-            height: 400px;
-            width: 600px;
+            height: 100vh;
+            width: 100vw;
         }
     </style>
 </head>
