add commented out hacky dark-mode

--- a/index.html
+++ b/index.html
@@ -12,13 +12,9 @@
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script> 
     <style>
-        body {
-            margin: 0;
-        }
-        #map { 
-            height: 100vh;
-            width: 100vw;
-        }
+        body { margin: 0; }
+        #map { height: 100vh; width: 100vw; }
+        /*@media (prefers-color-scheme: dark) {.leaflet-tile {filter: invert() hue-rotate(180deg);}}/*
     </style>
 </head>
 <body lang="de">
